@startuml

title __SERVER's Class Diagram__\n

  namespace Clinic.Server {
    class Clinic.Server.Server {
        {static} + main()
    }
  }
  

  namespace Clinic.Server {
    class Clinic.Server.ServerDirector {
        + diagnosisCreateGivenReference()
        + diagnosisGetAllDoctor()
        + diagnosisGetAllPatient()
        + diagnosisRemoveGivenReference()
        + diagnosisUpdateGivenReference()
        + doctorCreateGivenDoctor()
        + doctorGetAll()
        + doctorGetGivenId()
        + doctorGetGivenPatient()
        + doctorRemoveGivenDoctor()
        + doctorRequestGivenDate()
        + doctorRequestGivenName()
        + doctorRequestGivenTime()
        + doctorUpdateGivenDoctor()
        + login()
        + logout()
        + patientGetAll()
    }
  }
  

  namespace Clinic.Server {
    class Clinic.Server.ServerSecretary {
        - avaiableID : int
        - clientTokens : List<Token>
        + ServerSecretary()
        + getMyServer()
        + handleMessageFromClient()
        + setMyServer()
        - findToken()
        - getDoctorWithID()
        - logout()
    }
  }
  

  Clinic.Server.ServerSecretary o-- Clinic.Server.ServerDirector : director
  Clinic.Server.ServerSecretary o-- Clinic.Server.Connection.MyServer : myServer

@enduml
